[theme] fix button spacing on subscriptions page

--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -129,6 +129,11 @@ div.error {
   border: 0px none;
 }
 
+/* fix buttons on /user/x/subscriptions page */
+#subscriptions-user-settings-form input.btn {
+  margin: 0.4em;
+}
+
 /**
  * 2.LAYOUT
  */
